--- a/problem_1.ipynb
+++ b/problem_1.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "\n",
         "\n",
-        "<h1><b>Assignmen-1(ML2)<b> <br>\n",
+        "<h1><b>Assignment-1(ML2)<b> <br>\n",
         "\n",
         "\n",
         "<h2> Name : Mona Kumari <br>\n",
