--- a/problem_3.ipynb
+++ b/problem_3.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "\n",
-        "<h1><b>Assignmen-1(ML2)<b>\n",
+        "<h1><b>Assignment-1(ML2)<b>\n",
         "<h2> Name : Mona Kumari <br>\n",
         "Roll No. :<b> CS2311</b>\n",
         "\n",
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "uSy6KOLvWhLR"
       },
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "iq2wxcUb3LUJ"
       },
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "dBhpw8bc3LUL"
       },
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "FNsj-apY94Kv"
       },
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -540,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "mtMHQq6BRy8T",
         "colab": {
@@ -564,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -606,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -667,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -804,7 +804,7 @@
         "id": "AXU7yeoFY1kA",
         "outputId": "2e013c1e-5fca-4cf4-b887-97447bc36fea"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -838,7 +838,7 @@
       "metadata": {
         "id": "7qClsvQHa4GU"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +855,7 @@
       "metadata": {
         "id": "MvaO8IlJa525"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +897,7 @@
         "id": "WfRp_34RbSeF",
         "outputId": "f7e39c45-50cf-4c10-bba2-150a9a630c24"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -946,7 +946,7 @@
         "id": "5m6yb7o4YnQz",
         "outputId": "8f12a1b6-1fd3-4e62-92f6-2e0056a0550e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -972,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
